--- a/tutorial/source/scanvi.ipynb
+++ b/tutorial/source/scanvi.ipynb
@@ -36,7 +36,8 @@
     "if not smoke_test:\n",
     "    # install scanpy (used for pre-processing and UMAP)\n",
     "    !pip install -q scanpy==1.6.0\n",
-    "    !pip install -q googledrivedownloader"
+    "    # install scvi (used to get data)\n",
+    "    !pip install --quiet scvi-tools[tutorials]"
    ]
   },
   {
