--- a/tutorial/source/scanvi.ipynb
+++ b/tutorial/source/scanvi.ipynb
@@ -87,7 +87,7 @@
     "# Download and pre-process data\n",
     "batch_size = 100\n",
     "if not smoke_test:\n",
-    "    dataloader, num_genes, l_mean, l_scale, anndata = get_data(dataset='pbmc', batch_size=batch_size)\n",
+    "    dataloader, num_genes, l_mean, l_scale, anndata = get_data(dataset='pbmc', cuda=True, batch_size=batch_size)\n",
     "else:\n",
     "    dataloader, num_genes, l_mean, l_scale, anndata = get_data(dataset='mock')"
    ]
