--- a/tutorial/source/scanvi.ipynb
+++ b/tutorial/source/scanvi.ipynb
@@ -683,7 +683,8 @@
    "source": [
     "if not smoke_test:\n",
     "    # Now that we're done training we'll inspect the latent representations we've learned\n",
-    "\n",
+    "    import scanpy as sc\n",
+    "    \n",
     "    # Put the neural networks in evaluation mode (needed because of batch norm)\n",
     "    scanvi.eval()\n",
     "\n",
