--- a/tutorial/source/scanvi.ipynb
+++ b/tutorial/source/scanvi.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "if not smoke_test:\n",
     "    # install scanpy (used for pre-processing and UMAP)\n",
-    "    !pip install -q scanpy==1.6.0\n",
+    "    !pip install -q scanpy==1.7.0rc1\n",
     "    # install scvi (used to get data)\n",
     "    !pip install --quiet scvi-tools[tutorials]"
    ]
@@ -637,7 +637,7 @@
     "# For optimal results it is necessary to tweak the optimization parameters.\n",
     "# For our purposes, however, 60 epochs of training is sufficient.\n",
     "# Training should take about 6 minutes on a GPU-equipped Colab instance.\n",
-    "num_epochs = 60 if not smoke_test else 1\n",
+    "num_epochs = 2 if not smoke_test else 1\n",
     "\n",
     "for epoch in range(num_epochs):\n",
     "    losses = []\n",
