--- a/tutorial/source/scanvi.ipynb
+++ b/tutorial/source/scanvi.ipynb
@@ -36,6 +36,7 @@
     "if not smoke_test:\n",
     "    # install scanpy (used for pre-processing and UMAP)\n",
     "    !pip install -q scanpy==1.7.0rc1\n",
+    "    !pip install --quiet --upgrade umap-learn\n",
     "    # install scvi (used to get data)\n",
     "    !pip install --quiet scvi-tools[tutorials]"
    ]
