--- a/tutorial/source/scanvi.ipynb
+++ b/tutorial/source/scanvi.ipynb
@@ -36,9 +36,9 @@
     "if not smoke_test:\n",
     "    # install scanpy (used for pre-processing and UMAP)\n",
     "    !pip install -q scanpy==1.7.0rc1\n",
-    "    !pip install --quiet --upgrade umap-learn\n",
+    "    !pip install -q umap-learn==0.5.2\n",
     "    # install scvi (used to get data)\n",
-    "    !pip install --quiet scvi-tools[tutorials]"
+    "    !pip install -q scvi-tools[tutorials]"
    ]
   },
   {
