--- a/tutorial/source/scanvi.ipynb
+++ b/tutorial/source/scanvi.ipynb
@@ -35,8 +35,8 @@
     "\n",
     "if not smoke_test:\n",
     "    # install scanpy (used for pre-processing and UMAP)\n",
-    "    !pip install -q scanpy==1.7.0rc1\n",
-    "    !pip install -q umap-learn==0.5.2\n",
+    "    !pip install -q scanpy==1.8.2\n",
+    "    #!pip install -q umap-learn==0.5.2\n",
     "    # install scvi (used to get data)\n",
     "    !pip install -q scvi-tools[tutorials]"
    ]
