--- a/tutorial/source/scanvi.ipynb
+++ b/tutorial/source/scanvi.ipynb
@@ -29,14 +29,14 @@
    },
    "outputs": [],
    "source": [
+    "# setup environment\n",
     "import os\n",
-    "\n",
     "smoke_test = ('CI' in os.environ)  # for continuous integration tests\n",
     "\n",
     "if not smoke_test:\n",
     "    # install scanpy (used for pre-processing and UMAP)\n",
     "    !pip install -q scanpy==1.8.2\n",
-    "    #!pip install -q umap-learn==0.5.2\n",
+    "    !pip install -q umap-learn==0.5.1\n",
     "    # install scvi (used to get data)\n",
     "    !pip install -q scvi-tools[tutorials]"
    ]
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data pre-processing"
+    "## Data pre-processing"
    ]
   },
   {
@@ -85,6 +85,7 @@
    },
    "outputs": [],
    "source": [
+    "%%capture\n",
     "# Download and pre-process data\n",
     "batch_size = 100\n",
     "if not smoke_test:\n",
@@ -177,16 +178,25 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Semi-supervised generative modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "8x1ArSpf1OBD"
    },
    "source": [
-    "Our high-level goal is to learn a parametric model p(**x**) that provides a good fit to the observed count data {**x**_i}. To build a sufficiently rich and flexible model we introduce several latent variables that can capture variability in the data. In particular we introduce the following latent variables:\n",
+    "Our high-level goal is to learn a parametric model p(**x**) that provides a good fit to the observed count data {**x**_i}. \n",
+    "To build a sufficiently rich and flexible model we introduce several latent variables that can capture variability in the data. In particular we introduce the following latent variables:\n",
     "- two continuous latent variables **z**_1 and **z**_2 which are intended to encode things like cell state\n",
     "- a scalar latent variable **ℓ** that encodes the total number of counts in a cell, and thus reflects cell size, capture efficiency, etc\n",
     "- a discrete latent variable **y** that encodes the four possible cell labels\n",
     "\n",
-    "The structure of our model can be represented as a plate diagram, with the index *i* ranging over the N cells (in other words we are modeling the count matrix row-by-row). In particular each cell has its own copy of each of these latent variables:\n"
+    "The structure of our model can be represented as a plate diagram, with the index *i* ranging over the N cells (in other words we are modeling the count matrix row-by-row). \n",
+    "In particular each cell has its own copy of each of these latent variables:"
    ]
   },
   {
@@ -265,7 +275,10 @@
     "id": "G49G_jdfFbzq"
    },
    "source": [
-    "Recall that in Variational Inference it's necessary to specify a variational distribution. In Pyro we call these *guides*. While Pyro includes some machinery for constructing these automatically, for complex models it's usually necessary to build these by hand in order to get the best possible performance. Let's sketch the high-level structure of the guide we use for this model:"
+    "## Variational inference\n",
+    "\n",
+    "Recall that in Variational Inference it's necessary to specify a variational distribution. In Pyro we call these *guides*. \n",
+    "While Pyro includes some machinery for constructing these automatically, for complex models it's usually necessary to build these by hand in order to get the best possible performance. Let's sketch the high-level structure of the guide we use for this model:"
    ]
   },
   {
@@ -343,7 +356,11 @@
     "id": "SBhy4IxcHmMG"
    },
    "source": [
-    "The main thing we need to do to complete the specification of our model and guide is define the various decoder/encoder neural networks. Since this is largely just a matter of invoking standard PyTorch API, we do not go into great detail here. We limit ourselves to taking a quick look at `XDecoder`, which is the decoder neural network we use to specify the observation distribution p(**x** | **z**_2) used in the model:"
+    "## Neural encoders and decoders\n",
+    "\n",
+    "The main thing we need to do to complete the specification of our model and guide is define the various decoder/encoder neural networks. \n",
+    "Since this is largely just a matter of invoking standard PyTorch API, we do not go into great detail here. \n",
+    "We limit ourselves to taking a quick look at `XDecoder`, which is the decoder neural network we use to specify the observation distribution p(**x** | **z**_2) used in the model:"
    ]
   },
   {
@@ -469,9 +486,13 @@
     "id": "lvbYfsZhJMAs"
    },
    "source": [
-    "At this juncture we can put everything together. We will package our Pyro model and guide as a PyTorch `nn.Module`. We briefly discuss some of the more technical points that were swept under the rug in our high-level specifications `model_sketch` and `guide_sketch` introduced above:\n",
+    "## Putting everything together\n",
+    "\n",
+    "At this juncture we can put everything together. \n",
+    "We will package our Pyro model and guide as a PyTorch `nn.Module`. We briefly discuss some of the more technical points that were swept under the rug in our high-level specifications `model_sketch` and `guide_sketch` introduced above:\n",
     "- We use `pyro.module` statements to register the various neural networks with Pyro (this ensures their parameters get trained).\n",
-    "- The [semi-supervised modeling framework](https://arxiv.org/abs/1406.5298) upon which scANVI is based includes an additional term in the ELBO loss function that ensures that the `classifier` neural network learns from both labeled and unlabeled data. This explains the presence of the `pyro.factor` statement in the guide, which essentially just adds an auxiliary cross entropy loss term.\n",
+    "- The [semi-supervised modeling framework](https://arxiv.org/abs/1406.5298) upon which scANVI is based includes an additional term in the ELBO loss function that ensures that the `classifier` neural network learns from both labeled and unlabeled data. \n",
+    "This explains the presence of the `pyro.factor` statement in the guide, which essentially just adds an auxiliary cross entropy loss term.\n",
     "- In defining `nb_logits` below we use a fudge factor `epsilon` to ensure numerical stability. Fitting flexible models equipped with neural networks to high-dimensional data inevitably requires paying some attention to numerical issues."
    ]
   },
@@ -576,6 +597,8 @@
     "id": "jYxtIFx3KvKx"
    },
    "source": [
+    "## Training\n",
+    "\n",
     "Now that we've fully specified our model and guide we can proceed to training via stochastic variational inference!"
    ]
   },
@@ -638,7 +661,7 @@
     "# For optimal results it is necessary to tweak the optimization parameters.\n",
     "# For our purposes, however, 60 epochs of training is sufficient.\n",
     "# Training should take about 6 minutes on a GPU-equipped Colab instance.\n",
-    "num_epochs = 2 if not smoke_test else 1\n",
+    "num_epochs = 60 if not smoke_test else 1\n",
     "\n",
     "for epoch in range(num_epochs):\n",
     "    losses = []\n",
@@ -664,7 +687,11 @@
     "id": "yDuoXcaZORC9"
    },
    "source": [
-    "Finally, we generate a figure that illustrates the latent representations learned by our model. In particular we identify each cell with the 10-dimensional representation encoded in the inferred latent variable **z**_2. Note that for a given cell with counts **x**, the inferred mean of **z**_2 can be computed by using the `z2l_encoder` that is part of our amortized guide. \n",
+    "## Plotting our results\n",
+    "\n",
+    "Finally, we generate a figure that illustrates the latent representations learned by our model. \n",
+    "In particular we identify each cell with the 10-dimensional representation encoded in the inferred latent variable **z**_2. \n",
+    "Note that for a given cell with counts **x**, the inferred mean of **z**_2 can be computed by using the `z2l_encoder` that is part of our amortized guide. \n",
     "\n",
     "In addition we show that our `classifier` neural network can be used to label the unlabeled cells. Moreover, these labels come equipped with uncertainty estimates."
    ]
@@ -739,20 +766,6 @@
     "\n",
     "    fig.tight_layout()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
