--- a/tutorial/source/scanvi.ipynb
+++ b/tutorial/source/scanvi.ipynb
@@ -581,7 +581,7 @@
     "# Packages the scANVI model and guide as a PyTorch nn.Module\n",
     "class SCANVI(nn.Module):\n",
     "    def __init__(self, num_genes, num_labels, l_loc, l_scale, \n",
-    "                 latent_dim=10, alpha=0.05, scale_factor=1.0):\n",
+    "                 latent_dim=10, alpha=0.01, scale_factor=1.0):\n",
     "        self.num_genes = num_genes\n",
     "        self.num_labels = num_labels\n",
     "\n",
@@ -659,7 +659,7 @@
     "                classification_loss = y_dist.log_prob(y)\n",
     "                # Note that the negative sign appears because we're adding this term in the guide\n",
     "                # and the guide log_prob appears in the ELBO as -log q\n",
-    "                pyro.factor(\"classification_loss\", -self.alpha * classification_loss, has_rsample=True)\n",
+    "                pyro.factor(\"classification_loss\", -self.alpha * classification_loss, has_rsample=False)\n",
     "\n",
     "            z1_loc, z1_scale = self.z1_encoder(z2, y)\n",
     "            pyro.sample(\"z1\", dist.Normal(z1_loc, z1_scale).to_event(1))"
@@ -968,7 +968,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
