Flesh out general sections of the workflow tutorial

--- a/tutorial/source/workflow.ipynb
+++ b/tutorial/source/workflow.ipynb
@@ -20,7 +20,6 @@
     "- Avoid NANs by intellitently [initializing](https://docs.pyro.ai/en/dev/infer.autoguide.html#module-pyro.infer.autoguide.initialization) and [.clamp()](https://pytorch.org/docs/stable/generated/torch.clamp.html)ing.\n",
     "- [Reparametrize](https://docs.pyro.ai/en/dev/infer.reparam.html) the model to improve geometry.\n",
     "- Create a custom variational family by combining [AutoGuides](https://docs.pyro.ai/en/dev/infer.autoguide.html) or [EasyGuides](https://docs.pyro.ai/en/dev/contrib.easyguide.html).\n",
-    "- Precondition MCMC via a [variational](https://docs.pyro.ai/en/dev/infer.reparam.html#module-pyro.infer.reparam.neutra) [preconditioner](https://docs.pyro.ai/en/dev/infer.reparam.html#module-pyro.infer.reparam.structured).\n",
     "\n",
     "#### Table of contents\n",
     "\n",
@@ -29,8 +28,7 @@
     "3. [Create an initialization heuristic](#Create-an-initialization-heuristic)\n",
     "4. [Sanity check using mean-field inference](#Sanity-check)\n",
     "5. [Reparametrize the model](#Reparametrize)\n",
-    "6. [Customize the variational family (autoguides, easyguides, custom guides](#Customize)\n",
-    "7. [Draw samples via variationally preconditioned HMC](#Precondition)"
+    "6. [Customize the variational family (autoguides, easyguides, custom guides](#Customize)"
    ]
   },
   {
@@ -50,7 +48,6 @@
     "4. Sanity check using MAP or mean-field inference.\n",
     "5. Reparameterize the model, evaluating results under mean field VI.\n",
     "6. Customize the variational family (autoguides, easyguides, custom guides).\n",
-    "7. Optionally draw posterior samples via reparameterized, variationally preconditioned MCMC.\n",
     "\n",
     "The crux of efficient workflow is to ensure changes don't break your pipeline. That is, after you build a number of pipeline stages, validate results, and decide to change one component in the pipeline, you'd like to minimize code changes needed in other components. The remainder of this tutorial describes these steps individually, then describes nuances of interactions among stages, then provides an example."
    ]
@@ -256,6 +253,32 @@
    "source": [
     "reparam_model = AutoReparam()(model)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Customize the variational family\n",
+    "\n",
+    "When creating a new model, we recommend starting with mean field variational inference using an [AutoNormal]() guide. This mean field guide is good at finding the neighborhood of your model's mode, but naively it ignores correlations between latent variables. A first step in capturing correlations is to reparametrize the model as above: using a `LocScaleReparam` or `HaarReparam` already allows the guide to capture some correlations among latent variables.\n",
+    "\n",
+    "The next step towards modeling uncertainty is to customize the variational family by trying other autoguides, building on [EasyGuide](), or creating a custom guide using Pyro primitives. We recommend increasing guide complexity gradually via these steps:\n",
+    "1. Start with an [AutoNormal]() guide.\n",
+    "2. Try [AutoLowRankMultivariateNormal](), which can model the principle components of correlated uncertainty. (For models with only ~100 latent variables you might also try [AutoMultivariateNormal]() or [AutoGaussian]()).\n",
+    "3. Try combining multiple guides [AutoGuideList](). For example if [AutoLowRankMultivariateNormal]() is too expensive for all the latent variables, you can use [AutoGuideList]() to combine an [AutoLowRankMultivariateNormal]() guide over a few top-level global latent variables, together with a cheaper [AutoNormal]() guide over more numerous local latent variables.\n",
+    "4. Try using [AutoGuideList]() to combine a autoguide together with a custom guide function built using `pyro.sample`, `pyro.param`, and `pyro.plate`. Given a `partial_guide()` function that covers just a few latent variables, you can `AutoGuideList.append(partial_guide)` just as you append autoguides.\n",
+    "5. Consider customizing one of Pyro's autoguides that leverage model structure, e.g. [AutoStructured](https://docs.pyro.ai/en/latest/infer.autoguide.html#autostructured), [AutoNormalMessenger](https://docs.pyro.ai/en/latest/infer.autoguide.html#autonormalmessenger), [AutoHierarchicalNormalMessenger](https://docs.pyro.ai/en/latest/infer.autoguide.html#autohierarchicalnormalmessenger) [AutoRegressiveMessenger](https://docs.pyro.ai/en/latest/infer.autoguide.html#autoregressivemessenger).\n",
+    "6. For models with local correlations, consider building on [EasyGuide](https://docs.pyro.ai/en/latest/contrib.easyguide.html), a framework for building guides over groups of variables.\n",
+    "\n",
+    "While a fully-custom guides built from `pyro.sample` primitives offer the most flexible variational family, they are also the most brittle guides because each code change to the model or reparametrizer requires changes in the guide. The author recommends avoiding completely low-level guides and instead using `AutoGuide` or `EasyGuide` for at least some parts of the model, thereby speeding up model iteration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
