Start adding example to workflow tutorial

--- a/tutorial/source/workflow.ipynb
+++ b/tutorial/source/workflow.ipynb
@@ -82,6 +82,8 @@
     "    NeuTraReparam,\n",
     ")\n",
     "from pyro.optim import ClippedAdam\n",
+    "from pyro.ops.special import sparse_multinomial_likelihood\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "smoke_test = ('CI' in os.environ)\n",
     "assert pyro.__version__.startswith('1.7.0')"
@@ -271,6 +273,166 @@
     "6. For models with local correlations, consider building on [EasyGuide](https://docs.pyro.ai/en/latest/contrib.easyguide.html), a framework for building guides over groups of variables.\n",
     "\n",
     "While a fully-custom guides built from `pyro.sample` primitives offer the most flexible variational family, they are also the most brittle guides because each code change to the model or reparametrizer requires changes in the guide. The author recommends avoiding completely low-level guides and instead using `AutoGuide` or `EasyGuide` for at least some parts of the model, thereby speeding up model iteration."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = torch.load(os.path.expanduser(\"~/pyro-cov/results/nextstrain.data.pt\"))\n",
+    "def summarize(x, name=\"\"):\n",
+    "    if isinstance(x, dict):\n",
+    "        for k, v in sorted(x.items()):\n",
+    "            summarize(v, name + \".\" + k if name else k)\n",
+    "    elif isinstance(x, torch.Tensor):\n",
+    "        print(f\"{name}: {type(x).__name__} of shape {tuple(x.shape)}\")\n",
+    "    elif isinstance(x, list):\n",
+    "        print(f\"{name}: {type(x).__name__} of length {len(x)}\")\n",
+    "    else:\n",
+    "        print(f\"{name}: {type(x).__name__}\")\n",
+    "summarize(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model(dataset):\n",
+    "    features = dataset[\"features\"]\n",
+    "    counts = dataset[\"counts\"]\n",
+    "    assert features.shape[0] == counts.shape[-1]\n",
+    "    S, M = features.shape\n",
+    "    T, P, S = counts.shape\n",
+    "    time = torch.arange(float(T)) * 5.5 / dataset[\"time_step_days\"]\n",
+    "    time -= time.mean()\n",
+    "    strain_plate = pyro.plate(\"strain\", S, dim=-1)\n",
+    "    place_plate = pyro.plate(\"place\", P, dim=-2)\n",
+    "    time_plate = pyro.plate(\"time\", T, dim=-3)\n",
+    "\n",
+    "    # Model each region as multivariate logistic growth.\n",
+    "    rate_scale = pyro.sample(\"rate_scale\", dist.LogNormal(-4, 2))\n",
+    "    init_scale = pyro.sample(\"init_scale\", dist.LogNormal(0, 2))\n",
+    "\n",
+    "    coef = pyro.sample(\"coef\", dist.Laplace(torch.zeros(M), 0.01).to_event(1))\n",
+    "    with strain_plate:\n",
+    "        rate_loc = pyro.deterministic(\"rate_loc\", 0.01 * coef @ features.T)\n",
+    "    with place_plate, strain_plate:\n",
+    "        rate = pyro.sample(\"rate\", dist.Normal(rate_loc, rate_scale))\n",
+    "        init = pyro.sample(\"init\", dist.Normal(0, init_scale))\n",
+    "    logits = init + rate * time[:, None, None]\n",
+    "    \n",
+    "    # Observe sequences via a multinomial likelihood.\n",
+    "    with time_plate, place_plate:\n",
+    "        pyro.sample(\n",
+    "            \"obs\",\n",
+    "            dist.Multinomial(logits=logits.unsqueeze(-2), validate_args=False),\n",
+    "            obs=counts.unsqueeze(-2),\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model(dataset):\n",
+    "    features = dataset[\"features\"]\n",
+    "    counts = dataset[\"counts\"]\n",
+    "    sparse_counts = dataset[\"sparse_counts\"]\n",
+    "    assert features.shape[0] == counts.shape[-1]\n",
+    "    S, M = features.shape\n",
+    "    T, P, S = counts.shape\n",
+    "    time = torch.arange(float(T)) * 5.5 / dataset[\"time_step_days\"]\n",
+    "    time -= time.mean()\n",
+    "\n",
+    "    # Model each region as multivariate logistic growth.\n",
+    "    rate_scale = pyro.sample(\"rate_scale\", dist.LogNormal(-4, 2))\n",
+    "    init_scale = pyro.sample(\"init_scale\", dist.LogNormal(0, 2))\n",
+    "    coef = pyro.sample(\"coef\", dist.Laplace(torch.zeros(M), 0.01).to_event(1))\n",
+    "    with pyro.plate(\"strain\", S, dim=-1):\n",
+    "        rate_loc = pyro.deterministic(\"rate_loc\", 0.01 * coef @ features.T)\n",
+    "        with pyro.plate(\"place\", P, dim=-2):\n",
+    "            rate = pyro.sample(\"rate\", dist.Normal(rate_loc, rate_scale))\n",
+    "            init = pyro.sample(\"init\", dist.Normal(0, init_scale))\n",
+    "    logits = init + rate * time[:, None, None]\n",
+    "\n",
+    "    # Observe sequences via a cheap sparse multinomial likelihood.\n",
+    "    logits = logits.log_softmax(-1)\n",
+    "    sparse_logits = logits[sparse_counts[\"index\"].unbind(0)]\n",
+    "    pyro.factor(\n",
+    "        \"obs\",\n",
+    "        sparse_multinomial_likelihood(\n",
+    "            sparse_counts[\"total\"], sparse_logits, sparse_counts[\"value\"]\n",
+    "        )\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fit_svi(lr=0.1, num_steps=1001, log_every=1):\n",
+    "    pyro.clear_param_store()\n",
+    "    pyro.set_rng_seed(20211205)\n",
+    "    guide = AutoNormal(model, init_scale=0.01)\n",
+    "    optim = ClippedAdam({\"lr\": lr, \"lrd\": 0.1 ** (1 / num_steps)})\n",
+    "    svi = SVI(model, guide, optim, Trace_ELBO())\n",
+    "    losses = []\n",
+    "    num_obs = dataset[\"counts\"].ne(0).sum().item()\n",
+    "    for step in range(num_steps):\n",
+    "        loss = svi.step(dataset) / num_obs\n",
+    "        losses.append(loss)\n",
+    "        if step % log_every == 0:\n",
+    "            print(f\"step {step: >4d} loss = {loss:0.6g}\")\n",
+    "    plt.plot(losses)\n",
+    "    return guide"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "guide = fit_svi(log_every=10, num_steps=101)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_volcano(guide):\n",
+    "    with torch.no_grad(), poutine.mask(mask=False), pyro.plate(\"particles\", 100, dim=-3):\n",
+    "        coef = poutine.trace(guide).get_trace().nodes[\"coef\"][\"value\"]\n",
+    "    coef = coef.squeeze()\n",
+    "    mean = coef.mean(0)\n",
+    "    std = coef.std(0)\n",
+    "    z_score = mean.abs() / std\n",
+    "    plt.scatter(mean.exp().numpy(), z_score.numpy(), lw=0, s=5, alpha=0.5, color=\"black\")\n",
+    "    plt.yscale(\"symlog\")\n",
+    "    plt.xscale(\"log\")\n",
+    "    plt.ylim(0, None)\n",
+    "    plt.xlabel(\"$R_m/R_{wt}$\")\n",
+    "    plt.ylabel(\"z-score\")\n",
+    "    plt.title(f\"Volcano plot of {len(mean)} mutations\")\n",
+    "plot_volcano(guide)"
    ]
   },
   {
