Load nextstrain dataset from github

--- a/tutorial/source/workflow.ipynb
+++ b/tutorial/source/workflow.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,6 +96,45 @@
     "## Clean the data <a name=\"Clean-the-data\"/>\n",
     "\n",
     "While in principle you could be Bayesian about everything, it's best to focus probabilistic inference on the truly uncertain parts of your problem, and include unambiguous decision in data preprocessing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "counts: Tensor of shape (27, 399, 1316)\n",
+      "features: Tensor of shape (1316, 2634)\n",
+      "lineages: list of length 1316\n",
+      "locations: list of length 399\n",
+      "mutations: list of length 2634\n",
+      "sparse_counts.index: Tensor of shape (3, 58012)\n",
+      "sparse_counts.total: Tensor of shape (27, 399)\n",
+      "sparse_counts.value: Tensor of shape (58012,)\n",
+      "start_date: datetime\n",
+      "time_step_days: int\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyro.contrib.examples.nextstrain import load_nextstrain_counts\n",
+    "dataset = load_nextstrain_counts()\n",
+    "\n",
+    "def summarize(x, name=\"\"):\n",
+    "    if isinstance(x, dict):\n",
+    "        for k, v in sorted(x.items()):\n",
+    "            summarize(v, name + \".\" + k if name else k)\n",
+    "    elif isinstance(x, torch.Tensor):\n",
+    "        print(f\"{name}: {type(x).__name__} of shape {tuple(x.shape)}\")\n",
+    "    elif isinstance(x, list):\n",
+    "        print(f\"{name}: {type(x).__name__} of length {len(x)}\")\n",
+    "    else:\n",
+    "        print(f\"{name}: {type(x).__name__}\")\n",
+    "summarize(dataset)"
    ]
   },
   {
@@ -280,26 +319,6 @@
    "metadata": {},
    "source": [
     "## Example"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = torch.load(os.path.expanduser(\"~/pyro-cov/results/nextstrain.data.pt\"))\n",
-    "def summarize(x, name=\"\"):\n",
-    "    if isinstance(x, dict):\n",
-    "        for k, v in sorted(x.items()):\n",
-    "            summarize(v, name + \".\" + k if name else k)\n",
-    "    elif isinstance(x, torch.Tensor):\n",
-    "        print(f\"{name}: {type(x).__name__} of shape {tuple(x.shape)}\")\n",
-    "    elif isinstance(x, list):\n",
-    "        print(f\"{name}: {type(x).__name__} of length {len(x)}\")\n",
-    "    else:\n",
-    "        print(f\"{name}: {type(x).__name__}\")\n",
-    "summarize(dataset)"
    ]
   },
   {
